--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Site de noticias",
   "main": "noticias.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./app.js"
   },
   "author": "Kaic Murilo",
   "license": "ISC",
